# CANtrip

./: .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASING.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: docs.yml
app/: AscLogWriter.cpp  AscLogWriter.h  BusAutoDetector.cpp  BusAutoDetector.h  BusLoadTracker.cpp  BusLoadTracker.h  BusLoadView.cpp  BusLoadView.h  CMakeLists.txt  CanControllerDialog.cpp  CanControllerDialog.h  CsvLogWriter.cpp  CsvLogWriter.h  DbcDecoder.cpp  DbcDecoder.h  GraphAxisDialog.cpp  GraphAxisDialog.h  GraphView.cpp  GraphView.h  GraphWindowContainer.cpp  GraphWindowContainer.h  HeadlessRunner.cpp  HeadlessRunner.h  LogFilenameTemplate.cpp  LogFilenameTemplate.h  LogReplaySource.cpp  LogReplaySource.h  LogWriter.h  LoggingOptionsDialog.cpp  LoggingOptionsDialog.h  MainWindow.cpp  MainWindow.h  MessageSender.cpp  MessageSender.h  RuneFile.cpp  RuneFile.h  SignalHistory.cpp  SignalHistory.h  StatusLed.cpp  StatusLed.h  (+9 more)
app/resources/: cantrip.qrc  cantrip.rc
architecture/bus-load-calculation/: index.html
architecture/can-backend-abstraction/: index.html
architecture/data-flow/: index.html
architecture/logging-and-replay/: index.html
architecture/overview/: index.html
architecture/rune-persistence/: index.html
architecture/send-message-internals/: index.html
cmake/: CANtripCompilerOptions.cmake
common/: AVlabsCanBackend.h  CMakeLists.txt  CanBackendRegistry.cpp  CanBitTiming.cpp  CanBitTiming.h  PcanApi.cpp  PcanApi.h  PeakBackend.cpp  PeakBackend.h  VectorBackend.cpp  VectorBackend.h
docs/: headless-mode.md  index.md
docs/architecture/: bus-load-calculation.md  can-backend-abstraction.md  data-flow.md  logging-and-replay.md  overview.md  rune-persistence.md  send-message-internals.md
docs/future/: cli-and-headless-mode.md
docs/user-guide/: about-tab.md  analysis-and-measurement-tab.md  getting-started.md  hardware-tab.md  home-tab.md  logging-tab.md  runes.md  stimulation-tab.md  troubleshooting.md
extcap/: CMakeLists.txt  can2pcap.cpp  pcan2pcap.cpp
headless-mode/: index.html
search/: search_index.json
test/: sample.dbc
user-guide/about-tab/: index.html
user-guide/analysis-and-measurement-tab/: index.html
user-guide/getting-started/: index.html
user-guide/hardware-tab/: index.html
user-guide/home-tab/: index.html
user-guide/logging-tab/: index.html
user-guide/runes/: index.html
user-guide/stimulation-tab/: index.html
user-guide/troubleshooting/: index.html
